# vadana

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-app-showcase.yml  release.yml
app-showcase/: README.md  index.html  package-lock.json  package.json
app-showcase/public/: latest.json
backend/: README.md  main.py  protocol.md  pyproject.toml
backend/live_voice/: __init__.py  __main__.py  audio_io.py  chat_title.py  default_prompt.py  download_supertonic.py  errors.py  hf_env.py  list_models.py  llm_client.py  logging_config.py  models_paths.py  multimodal.py  protocol.py  rebuild_knowledge.py  session.py  stt.py  text_split.py  torch_bootstrap.py  tts_engine.py  vad.py
backend/live_voice/knowledge/: __init__.py  context.py  embeddings.py  fingerprint.py  loaders.py  manager.py
backend/scripts/: smoke_client.py
backend/tests/: test_chat_title.py  test_errors.py  test_knowledge_context.py  test_knowledge_fingerprint.py  test_knowledge_loaders.py  test_list_models.py  test_llm_stream.py  test_models_paths.py  test_multimodal.py  test_protocol.py  test_sentence_split.py  test_system_prompt_compose.py  test_text_split.py
docs/: README.md  build.md  demo-script.md  frontend.md  project-tree.md
scripts/: build-release.cmd  build-release.ps1  generate-tauri-icons.py  repair-backend-venv.ps1  smoke.ps1  sync-backend-resources.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src/lib/: tauri.ts  (+27 more)
(+59 files in other folders)
