[project]
name = "live-voice-backend"
version = "0.1.0"
description = "Vadana voice assistant WebSocket sidecar"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "packaging>=24.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "numpy>=2.0,<3.0",
    "numba>=0.60.0",
    "sounddevice>=0.5.0",
    "openai-whisper>=20231117",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "pyttsx3>=2.90",
    "pywin32>=306; sys_platform == 'win32'",
    "supertonic>=1.2.1",
]

[tool.uv]
# Upstream supertonic still declares numpy<2; runtime works on NumPy 2 (see supertone-inc/supertonic-py#1).
dependency-metadata = [
    { name = "supertonic", requires-dist = [
        "onnxruntime>=1.10.0",
        "numpy>=1.21.0",
        "soundfile>=0.10.0",
        "huggingface-hub>=0.10.0",
    ] },
]

[project.scripts]
live-voice = "live_voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["live_voice"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"live_voice/session.py" = ["F401"]
